k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sso-service
  namespace: default
  labels:
    app: sso-platform
    component: api
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: sso-platform
    component: api
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
